Cleaned up some functionality, moved uuid into local file

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <option value="alpa">Alphabetical</option>
     </select>
     <div id="note-container"></div>
-    <button id="new-note">Submit</button>
-    <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
+    <button id="new-note">New Note</button>
+    <script src="uuid.js"></script>
     <script>
         uuidv4(); // -> v4 UUID
     </script>
