Added date storage using MomentJS and note sorting

--- a/edit.html
+++ b/edit.html
@@ -10,8 +10,10 @@
 <body>
     <a href="/index.html">Return Home</a>
     <input type="text" id="note-title" placeholder="Note Title">
+    <span class='last-edited'></span>
     <textarea id="note-body" placeholder="Enter note text"></textarea>
     <button id='remove-note'>Remove Note</button>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src='notes-functions.js'></script>
     <script src='notes-edit.js'></script>
 </body>
