--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <select name="" id="sort-by">
         <option value="edited">Last Edited</option>
         <option value="chron">Recently Created</option>
-        <option value="alpa">Alphabetical</option>
+        <option value="alpha">Alphabetical</option>
     </select>
     <div id="note-container"></div>
     <button id="new-note">New Note</button>
@@ -22,6 +22,7 @@
     <script>
         uuidv4(); // -> v4 UUID
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src='notes-functions.js'></script>
     <script src='notes-app.js'></script>
 </body>
