Refactoring w/ arrow functions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" id="search-text" placeholder="Filter Notes">
     <select name="" id="sort-by">
         <option value="edited">Last Edited</option>
-        <option value="chron">Recently Created</option>
+        <option value="chron">Created First</option>
         <option value="alpha">Alphabetical</option>
     </select>
     <div id="note-container"></div>
