--- a/edit.html
+++ b/edit.html
@@ -5,16 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Edit Note</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/mead.css">
+    <link rel="icon" href="img/favicon.png">
 </head>
 <body>
-    <a href="/index.html">Return Home</a>
-    <input type="text" id="note-title" placeholder="Note Title">
-    <span class='last-edited'></span>
-    <textarea id="note-body" placeholder="Enter note text"></textarea>
-    <button id='remove-note'>Remove Note</button>
+    <div class='header'>
+        <div class='container'>
+            <h1 class='header__title'>Notes App</h1>
+            <h2 class='header__subtitle'>Saving Notes You'll Never Forget</h2>
+        </div>
+    </div>
+    <div class="actions">
+        <div class="actions__container actions__container--spaced">
+                <a href="/index.html">Return Home</a>
+                <span class='last-edited'></span>
+        </div>
+    </div>
+    <div class="container">
+        <input type="text" id="note-title" class='title-input' placeholder="Note Title">
+        <textarea id="note-body" class='body-input' placeholder="Enter note text"></textarea>
+        <button id='remove-note' class='button button--secondary'>Remove Note</button>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-    <script src='notes-functions.js'></script>
-    <script src='notes-edit.js'></script>
+    <script src='scripts/notes-functions.js'></script>
+    <script src='scripts/notes-edit.js'></script>
 </body>
 </html>
