--- a/index.html
+++ b/index.html
@@ -5,25 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notes App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/mead.css">
+    <link rel="icon" href="img/favicon.png">
 </head>
 <body>
-    <h1>Notes App</h1>
-    <h2>Saving Notes You'll Never Forget</h2>
-    <input type="text" id="search-text" placeholder="Filter Notes">
-    <select name="" id="sort-by">
-        <option value="edited">Last Edited</option>
-        <option value="chron">Created First</option>
-        <option value="alpha">Alphabetical</option>
-    </select>
-    <div id="note-container"></div>
-    <button id="new-note">New Note</button>
-    <script src="uuid.js"></script>
+    <header class='header'>
+        <div class='container'>
+            <h1 class='header__title'>Notes App</h1>
+            <h2 class='header__subtitle'>Saving Notes You'll Never Forget</h2>
+        </div>
+    </header>
+    <div class='actions'>
+        <div class="actions__container">
+            <input class='input' type="text" id="search-text" placeholder="Filter Notes">
+            <select class='dropdown' name="" id="sort-by">
+                <option value="edited">Last Edited</option>
+                <option value="chron">Created First</option>
+                <option value="alpha">Alphabetical</option>
+            </select>
+        </div>
+    </div>
+    <div class="container">
+        <div id="note-container"></div>
+        <button id="new-note" class='button'>New Note</button>
+    </div>
+    <script src="scripts/uuid.js"></script>
     <script>
         uuidv4(); // -> v4 UUID
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-    <script src='notes-functions.js'></script>
-    <script src='notes-app.js'></script>
+    <script src='scripts/notes-functions.js'></script>
+    <script src='scripts/notes-app.js'></script>
 </body>
 </html>
